# serializer version: 1
# name: TestConfigOutputSnapshots.test_discover_matrix_structure
  dict({
    'raw_output_lines': 1082,
  })
# ---
# name: TestErrorOutputSnapshots.test_detect_error_message
  dict({
    'mentions_language': True,
    'starts_with_error': False,
  })
# ---
# name: TestErrorOutputSnapshots.test_validate_json_error_structure
  dict({
    'has_exit_code': True,
    'has_problems': True,
    'has_status': True,
    'status_value': 'failure',
  })
# ---
# name: TestHelpSnapshots.test_ai_loop_help_snapshot
  list([
    'usage: cihub ai-loop [-h] [--json] [--repo REPO]',
    '[--max-iterations MAX_ITERATIONS]',
    '[--fix-mode {safe,report-only}] [--emit-report]',
    '[--output-dir OUTPUT_DIR] [--max-minutes MAX_MINUTES]',
    '[--unsafe-unlimited] [--resume]',
    '[--contract-file CONTRACT_FILE] [--contract-strict]',
    '[--review-command REVIEW_COMMAND] [--artifact-pack]',
    '[--bundle-dir BUNDLE_DIR] [--remote]',
    '[--remote-provider {gh}] [--remote-repo REMOTE_REPO]',
    '[--workflow WORKFLOW] [--push]',
    '[--push-branch PUSH_BRANCH] [--push-remote PUSH_REMOTE]',
    '[--allow-protected-branch] [--allow-dirty] [--commit]',
    '[--commit-message COMMIT_MESSAGE]',
    '[--triage-mode {auto,latest,run,none}]',
    '[--triage-run-id TRIAGE_RUN_ID]',
    '[--triage-output-dir TRIAGE_OUTPUT_DIR]',
    '[--fallback {local,stop}] [--remote-dry-run]',
    'options:',
    '-h, --help            show this help message and exit',
    '--json                Output machine-readable JSON',
    '--repo REPO           Path to repo (default: .)',
    '--max-iterations MAX_ITERATIONS',
    'Maximum iterations before stopping (default: 10)',
    '--fix-mode {safe,report-only}',
    'Fix strategy: safe (auto-fix) or report-only (emit',
    'report pack only)',
    '--emit-report         Generate fix report prompt pack each iteration',
    '--output-dir OUTPUT_DIR',
    'Output directory for loop artifacts (default:',
    '.cihub/ai-loop)',
    '--max-minutes MAX_MINUTES',
    'Maximum runtime in minutes before stopping (default:',
    '60)',
    '--unsafe-unlimited    Allow unlimited iterations (still respects --max-',
    'minutes)',
    '--resume              Resume from an existing session directory',
    '--contract-file CONTRACT_FILE',
    'Path to contract file (Markdown with YAML front',
    'matter)',
    '--contract-strict     Require contract fields to be present',
    '--review-command REVIEW_COMMAND',
    'Shell command to run for per-iteration review',
    '--artifact-pack       Emit artifact bundle per iteration',
    '--bundle-dir BUNDLE_DIR',
    'Override bundle output directory',
    '--remote              Enable remote mode (GitHub Actions loop)',
    '--remote-provider {gh}',
    'Remote provider for GitHub Actions (default: gh)',
    '--remote-repo REMOTE_REPO',
    'Remote repo in owner/repo format (default: infer from',
    'git)',
    '--workflow WORKFLOW   Workflow name or ID filter for remote runs',
    '--push                Push changes to remote before each iteration',
    '--push-branch PUSH_BRANCH',
    'Branch to push for remote loop (default: ai/ci-loop)',
    '--push-remote PUSH_REMOTE',
    'Remote name to push (default: origin)',
    '--allow-protected-branch',
    'Allow pushing to protected branches (main/master)',
    '--allow-dirty         Allow starting remote loop with a dirty working tree',
    '--commit              Commit changes before pushing each iteration',
    '--commit-message COMMIT_MESSAGE',
    "Commit message prefix (default: 'AI loop iteration')",
    '--triage-mode {auto,latest,run,none}',
    'Remote triage mode (default: auto)',
    '--triage-run-id TRIAGE_RUN_ID',
    'Explicit run ID for remote triage',
    '--triage-output-dir TRIAGE_OUTPUT_DIR',
    'Override remote triage output directory',
    '--fallback {local,stop}',
    'Fallback behavior when remote triage fails (default:',
    'stop)',
    '--remote-dry-run      Remote mode without push; triage only',
  ])
# ---
# name: TestHelpSnapshots.test_check_help_snapshot
  list([
    'usage: cihub check [-h] [--json] [--smoke-repo SMOKE_REPO]',
    '[--smoke-subdir SMOKE_SUBDIR] [--install-deps] [--relax]',
    '[--keep] [--install-missing] [--require-optional] [--audit]',
    '[--security] [--full] [--mutation] [--all]',
    'options:',
    '-h, --help            show this help message and exit',
    '--json                Output machine-readable JSON',
    '--smoke-repo SMOKE_REPO',
    'Path to repo for smoke test (omit to scaffold',
    'fixtures)',
    '--smoke-subdir SMOKE_SUBDIR',
    'Subdirectory for monorepo smoke test',
    '--install-deps        Install repo dependencies during smoke test',
    '--relax               Relax tool toggles and thresholds during smoke test',
    '--keep                Keep generated fixtures on disk',
    '--install-missing     Prompt to install missing optional tools',
    '--require-optional    Fail if optional tools are missing',
    '--audit               Add drift detection checks (links, adr, configs)',
    '--security            Add security checks (bandit, pip-audit, trivy,',
    'gitleaks)',
    '--full                Add validation checks (templates, matrix, license,',
    'zizmor)',
    '--mutation            Add mutation testing with mutmut (~15min, very slow)',
    '--all                 Run all checks (audit + security + full + mutation)',
    'See also: smoke, verify, ci, preflight',
  ])
# ---
# name: TestHelpSnapshots.test_config_help_snapshot
  list([
    'usage: cihub config [-h] [--json] [--repo REPO] [--dry-run]',
    '{edit,show,set,enable,disable,apply-profile} ...',
    'positional arguments:',
    '{edit,show,set,enable,disable,apply-profile}',
    'edit                Edit config via wizard',
    'show                Show config',
    'set                 Set a config value',
    'enable              Enable a tool',
    'disable             Disable a tool',
    'apply-profile       Apply a profile to a repo config',
    'options:',
    '-h, --help            show this help message and exit',
    '--json                Output machine-readable JSON',
    '--repo REPO           Repo config name (required for most subcommands)',
    '--dry-run             Show updates without writing',
    'See also: registry, hub',
  ])
# ---
# name: TestHelpSnapshots.test_detect_help_snapshot
  list([
    'usage: cihub detect [-h] [--json] --repo REPO [--language {java,python}]',
    '[--explain]',
    'options:',
    '-h, --help            show this help message and exit',
    '--json                Output machine-readable JSON',
    '--repo REPO           Path to repo',
    '--language {java,python}',
    'Override detection',
    '--explain             Show detection reasons',
    'See also: init, preflight, scaffold',
  ])
# ---
# name: TestHelpSnapshots.test_docs_generate_help_snapshot
  list([
    'usage: cihub docs generate [-h] [--json] [--output OUTPUT] [--check]',
    'options:',
    '-h, --help       show this help message and exit',
    '--json           Output machine-readable JSON',
    '--output OUTPUT  Output directory (default: docs/reference)',
    '--check          Fail if docs would change',
  ])
# ---
# name: TestHelpSnapshots.test_docs_help_snapshot
  list([
    'usage: cihub docs [-h] {generate,check,links,stale,audit} ...',
    'positional arguments:',
    '{generate,check,links,stale,audit}',
    'generate            Generate CLI, config, env, and workflow reference docs',
    'check               Check reference docs are up to date',
    'links               Check documentation for broken links',
    'stale               Detect stale documentation references to',
    'removed/renamed code',
    'audit               Validate documentation lifecycle, ADR metadata, and',
    'references',
    'options:',
    '-h, --help            show this help message and exit',
    'See also: adr',
  ])
# ---
# name: TestHelpSnapshots.test_hub_ci_help_snapshot
  list([
    'usage: cihub hub-ci [-h] [--json]',
    '{actionlint-install,actionlint,release-parse-tag,release-update-tag,kyverno-install,kyverno-validate,kyverno-test,trivy-install,trivy-summary,zizmor-run,zizmor-check,license-check,gitleaks-summary,pytest-summary,summary,enforce,syntax-check,yamllint,repo-check,source-check,docker-compose-check,validate-configs,validate-profiles,validate-triage,verify-matrix-keys,quarantine-check,enforce-command-result,security-pip-audit,security-bandit,security-ruff,security-owasp,bandit,pip-audit,codeql-build,smoke-java-build,smoke-java-tests,smoke-java-coverage,smoke-java-checkstyle,smoke-java-spotbugs,smoke-python-install,smoke-python-tests,smoke-python-ruff,smoke-python-black,ruff,ruff-format,black,mypy,mutmut,coverage-verify,badges,badges-commit,outputs,thresholds}',
    '...',
    'positional arguments:',
    '{actionlint-install,actionlint,release-parse-tag,release-update-tag,kyverno-install,kyverno-validate,kyverno-test,trivy-install,trivy-summary,zizmor-run,zizmor-check,license-check,gitleaks-summary,pytest-summary,summary,enforce,syntax-check,yamllint,repo-check,source-check,docker-compose-check,validate-configs,validate-profiles,validate-triage,verify-matrix-keys,quarantine-check,enforce-command-result,security-pip-audit,security-bandit,security-ruff,security-owasp,bandit,pip-audit,codeql-build,smoke-java-build,smoke-java-tests,smoke-java-coverage,smoke-java-checkstyle,smoke-java-spotbugs,smoke-python-install,smoke-python-tests,smoke-python-ruff,smoke-python-black,ruff,ruff-format,black,mypy,mutmut,coverage-verify,badges,badges-commit,outputs,thresholds}',
    'actionlint-install  Download the actionlint binary',
    'actionlint          Run actionlint (optionally with reviewdog)',
    'release-parse-tag   Parse tag ref into version outputs',
    'release-update-tag  Update floating major tag',
    'kyverno-install     Download the kyverno CLI',
    'kyverno-validate    Validate kyverno policy syntax',
    'kyverno-test        Test kyverno policies against fixtures',
    'trivy-install       Download the trivy CLI',
    'trivy-summary       Parse Trivy JSON output and generate summary with',
    'counts',
    'zizmor-run          Run zizmor and produce SARIF (with fallback)',
    'zizmor-check        Check zizmor SARIF for high findings',
    'license-check       Run license checks for dependencies',
    'gitleaks-summary    Summarize gitleaks results',
    'pytest-summary      Generate pytest test results summary',
    'summary             Generate hub CI summary',
    'enforce             Fail if critical hub checks failed',
    'syntax-check        Compile Python files to catch syntax errors',
    'yamllint            Lint YAML files (hub defaults, repo configs, profiles)',
    'repo-check          Check if a repo checkout is present',
    'source-check        Detect source files for a repo',
    'docker-compose-check',
    'Check for docker-compose files in a repo',
    'validate-configs    Validate hub repo config files',
    'validate-profiles   Validate profile YAML files',
    'validate-triage     Validate triage.json against the triage schema',
    'verify-matrix-keys  Verify hub-run-all.yml matrix keys match discover.py',
    'output',
    'quarantine-check    Fail if any file imports from _quarantine',
    'enforce-command-result',
    'Enforce CommandResult pattern - fail if too many',
    'print() calls in commands/ (ADR-0042)',
    'security-pip-audit  Run pip-audit for hub-security workflows',
    'security-bandit     Run bandit for hub-security workflows',
    'security-ruff       Run Ruff security rules for hub-security workflows',
    'security-owasp      Run OWASP Dependency-Check for hub-security workflows',
    'bandit              Run bandit and enforce severity gates',
    'pip-audit           Run pip-audit and enforce vulnerability gate',
    'codeql-build        Run Java build for CodeQL analysis',
    'smoke-java-build    Run Java smoke build/test',
    'smoke-java-tests    Extract Java smoke test results',
    'smoke-java-coverage',
    'Extract Java smoke coverage metrics',
    'smoke-java-checkstyle',
    'Run Checkstyle and extract violations',
    'smoke-java-spotbugs',
    'Run SpotBugs and extract issues',
    'smoke-python-install',
    'Install dependencies for Python smoke tests',
    'smoke-python-tests  Run Python smoke tests and extract metrics',
    'smoke-python-ruff   Run Ruff for Python smoke tests',
    'smoke-python-black  Run Black for Python smoke tests',
    'ruff                Run ruff and emit issue count',
    'ruff-format         Run ruff formatter in check mode (fails if formatting',
    'is needed)',
    'black               Run black and emit issue count',
    'mypy                Run mypy type checking',
    'mutmut              Run mutmut and emit summary outputs',
    'coverage-verify     Verify coverage database exists and is readable for',
    'mutation testing',
    'badges              Generate or validate CI badges',
    'badges-commit       Commit and push badge updates',
    'outputs             Emit hub CI toggle outputs',
    'thresholds          Read/write thresholds from config/defaults.yaml',
    'options:',
    '-h, --help            show this help message and exit',
    '--json                Output machine-readable JSON',
  ])
# ---
# name: TestHelpSnapshots.test_init_help_snapshot
  list([
    'usage: cihub init [-h] [--json] --repo REPO [--language {java,python}]',
    '[--owner OWNER] [--name NAME] [--branch BRANCH]',
    '[--subdir SUBDIR] [--workdir SUBDIR] [--fix-pom] [--apply]',
    '[--force] [--wizard] [--dry-run]',
    '[--install-from {pypi,git,local}]',
    'options:',
    '-h, --help            show this help message and exit',
    '--json                Output machine-readable JSON',
    '--repo REPO           Path to repo',
    '--language {java,python}',
    'Override detection',
    '--owner OWNER         Repo owner (GitHub user/org)',
    '--name NAME           Repo name',
    '--branch BRANCH       Default branch (e.g., main)',
    '--subdir SUBDIR       Subdirectory for monorepos (repo.subdir)',
    '--workdir SUBDIR      Alias for --subdir',
    '--fix-pom             Fix pom.xml for Java repos (adds missing',
    'plugins/dependencies)',
    '--apply               Write files (default: dry-run)',
    '--force               Override repo_side_execution guardrails',
    '--wizard              Run interactive wizard (requires cihub[wizard])',
    '--dry-run             Print output instead of writing',
    '--install-from {pypi,git,local}',
    'How cihub should be installed in CI: pypi, git',
    '(default), or local',
    'See also: detect, scaffold, update, setup',
  ])
# ---
# name: TestHelpSnapshots.test_main_help_snapshot
  list([
    'usage: cihub [-h] [--version]',
    '{detect,preflight,doctor,scaffold,smoke,smoke-validate,check,verify,ci,ai-loop,run,report,triage,fix,docs,adr,config-outputs,discover,dispatch,hub,hub-ci,new,init,update,validate,setup,setup-secrets,setup-nvd,fix-pom,fix-deps,fix-gradle,sync-templates,config,registry,profile,tool,threshold,repo}',
    '...',
    'CI/CD Hub CLI',
    'positional arguments:',
    '{detect,preflight,doctor,scaffold,smoke,smoke-validate,check,verify,ci,ai-loop,run,report,triage,fix,docs,adr,config-outputs,discover,dispatch,hub,hub-ci,new,init,update,validate,setup,setup-secrets,setup-nvd,fix-pom,fix-deps,fix-gradle,sync-templates,config,registry,profile,tool,threshold,repo}',
    'detect              Detect repo language and tools',
    'preflight           Check environment readiness',
    'doctor              Alias for preflight',
    'scaffold            Generate a minimal fixture project',
    'smoke               Run a local smoke test',
    'smoke-validate      Validate smoke test setup/results',
    'check               Run local validation checks',
    'verify              Verify workflow/template contracts',
    'ci                  Run CI based on .ci-hub.yml',
    'ai-loop             Autonomous AI CI fix loop',
    'run                 Run one tool and emit JSON output',
    'report              Build reports and summaries',
    'triage              Generate triage bundle outputs',
    'fix                 Run auto-fixers or report issues for manual review',
    'docs                Generate reference documentation',
    'adr                 Manage Architecture Decision Records',
    'config-outputs      Emit config outputs for GitHub Actions',
    'discover            Generate repo matrix for hub-run-all.yml',
    'dispatch            Workflow dispatch helpers for hub orchestration',
    'hub                 Manage hub operational settings (config/hub-',
    'settings.yaml)',
    'hub-ci              Hub production CI helpers',
    'new                 Create hub-side repo config',
    'init                Generate .ci-hub.yml and hub-ci.yml',
    'update              Refresh hub-ci.yml and .ci-hub.yml',
    'validate            Validate .ci-hub.yml against schema',
    'setup               Complete setup wizard for onboarding repos to CI/CD',
    'Hub',
    'setup-secrets       Set HUB_DISPATCH_TOKEN on hub and connected repos',
    'setup-nvd           Set NVD_API_KEY on Java repos for OWASP Dependency',
    'Check',
    'fix-pom             Add missing Maven plugins/dependencies to pom.xml for',
    'Java repos',
    'fix-deps            Add missing Maven dependencies for Java repos',
    'fix-gradle          Add missing Gradle plugins to build.gradle for Java',
    'repos',
    'sync-templates      Sync caller workflow templates to dispatch-enabled',
    'repos',
    'config              Manage hub-side repo configs (config/repos/*.yaml)',
    'registry            Centralized repo configuration management with tier',
    'system',
    'profile             Manage CI profiles (tool enablement presets)',
    'tool                Manage CI tools (list, enable, disable, configure)',
    'threshold           Manage CI thresholds (coverage, mutation, security',
    'limits)',
    'repo                Manage repositories in the registry',
    'options:',
    '-h, --help            show this help message and exit',
    "--version             show program's version number and exit",
  ])
# ---
# name: TestHelpSnapshots.test_profile_help_snapshot
  list([
    'usage: cihub profile [-h] [--json]',
    '{list,show,create,edit,delete,export,import,validate} ...',
    'positional arguments:',
    '{list,show,create,edit,delete,export,import,validate}',
    'list                List available profiles',
    'show                Show profile details',
    'create              Create a new profile',
    'edit                Edit an existing profile',
    'delete              Delete a profile',
    'export              Export profile to a file',
    'import              Import profile from a file',
    'validate            Validate a profile',
    'options:',
    '-h, --help            show this help message and exit',
    '--json                Output machine-readable JSON',
    'See also: registry, tool, threshold',
  ])
# ---
# name: TestHelpSnapshots.test_registry_help_snapshot
  list([
    'usage: cihub registry [-h] [--json]',
    '{list,show,set,diff,sync,add,remove,bootstrap,export,import}',
    '...',
    'positional arguments:',
    '{list,show,set,diff,sync,add,remove,bootstrap,export,import}',
    'list                List all repos with their tiers',
    'show                Show detailed config for a repo',
    'set                 Set tier or override for a repo',
    'diff                Show drift from tier defaults vs actual configs',
    'sync                Sync registry settings to repo configs',
    'add                 Add a new repo to the registry',
    'remove              Remove a repo from the registry',
    'bootstrap           Import existing config/repos/*.yaml into registry',
    'export              Export registry to a JSON file for backup',
    'import              Import registry from a JSON backup file',
    'options:',
    '-h, --help            show this help message and exit',
    '--json                Output machine-readable JSON',
    'See also: profile, tool, threshold, repo',
  ])
# ---
# name: TestHelpSnapshots.test_report_help_snapshot
  list([
    'usage: cihub report [-h] [--json]',
    '{build,summary,outputs,aggregate,validate,dashboard,security-summary,smoke-summary,kyverno-summary,orchestrator-summary}',
    '...',
    'positional arguments:',
    '{build,summary,outputs,aggregate,validate,dashboard,security-summary,smoke-summary,kyverno-summary,orchestrator-summary}',
    'build               Build report.json from tool outputs',
    'summary             Render summary from report.json',
    'outputs             Write workflow outputs from report.json',
    'aggregate           Aggregate hub reports across repos',
    'validate            Validate report.json structure and content',
    'dashboard           Generate HTML or JSON dashboard from aggregated',
    'reports',
    'security-summary    Render hub security summaries',
    'smoke-summary       Render smoke test summaries',
    'kyverno-summary     Render Kyverno summaries',
    'orchestrator-summary',
    'Render orchestrator summaries',
    'options:',
    '-h, --help            show this help message and exit',
    '--json                Output machine-readable JSON',
    'See also: ci, triage',
  ])
# ---
# name: TestHelpSnapshots.test_smoke_help_snapshot
  list([
    'usage: cihub smoke [-h] [--json] [--subdir SUBDIR] [--type TYPE] [--all]',
    '[--full] [--install-deps] [--force] [--relax] [--keep]',
    '[repo]',
    'positional arguments:',
    'repo             Path to repo (omit to scaffold fixtures)',
    'options:',
    '-h, --help       show this help message and exit',
    '--json           Output machine-readable JSON',
    '--subdir SUBDIR  Subdirectory for monorepos',
    '--type TYPE      Fixture type to generate (repeatable): python-pyproject,',
    'python-setup, python-src-layout, java-maven, java-gradle,',
    'java-multi-module, monorepo',
    '--all            Generate and test all fixture types',
    '--full           Run cihub ci after init/validate',
    '--install-deps   Install repo dependencies during cihub ci',
    '--force          Allow init to overwrite existing .ci-hub.yml',
    '--relax          Relax tool toggles and thresholds when running full',
    '--keep           Keep generated fixtures on disk',
    'See also: scaffold, check, ci',
  ])
# ---
# name: TestHelpSnapshots.test_tool_enable_help_snapshot
  list([
    'usage: cihub tool enable [-h] [--wizard]',
    '[--for-repo NAME | --all-repos | --profile NAME]',
    '[--json]',
    '[tool]',
    'positional arguments:',
    'tool             Tool name (e.g., mypy, mutmut, trivy)',
    'options:',
    '-h, --help       show this help message and exit',
    '--wizard         Interactive mode - select tool and target',
    '--for-repo NAME  Enable for specific repo only',
    '--all-repos      Enable for all repos in registry',
    '--profile NAME   Enable in a profile instead of repo',
    '--json           Output machine-readable JSON',
  ])
# ---
# name: TestHelpSnapshots.test_tool_help_snapshot
  list([
    'usage: cihub tool [-h] [--json]',
    '{list,enable,disable,configure,status,validate,info} ...',
    'positional arguments:',
    '{list,enable,disable,configure,status,validate,info}',
    'list                List available tools',
    'enable              Enable a tool',
    'disable             Disable a tool',
    'configure           Configure a tool setting',
    'status              Show tool status',
    'validate            Validate tool installation',
    'info                Show detailed tool information',
    'options:',
    '-h, --help            show this help message and exit',
    '--json                Output machine-readable JSON',
    'See also: registry, profile, run',
  ])
# ---
# name: TestHelpSnapshots.test_tool_list_help_snapshot
  list([
    'usage: cihub tool list [-h] [--language {python,java}]',
    '[--category {lint,security,test,format,coverage,mutation,container}]',
    '[--enabled-only] [--repo NAME] [--json]',
    'options:',
    '-h, --help            show this help message and exit',
    '--language {python,java}',
    'Filter by language',
    '--category {lint,security,test,format,coverage,mutation,container}',
    'Filter by category',
    '--enabled-only        Show only enabled tools (requires --repo)',
    '--repo NAME           Show tool status for specific repo',
    '--json                Output machine-readable JSON',
  ])
# ---
# name: TestHelpSnapshots.test_triage_help_snapshot
  list([
    'usage: cihub triage [-h] [--json] [--output-dir OUTPUT_DIR] [--report REPORT]',
    '[--summary SUMMARY] [--run RUN_ID] [--latest] [--watch]',
    '[--interval SECONDS] [--artifacts-dir PATH]',
    '[--repo OWNER/REPO] [--workflow NAME] [--branch NAME]',
    '[--multi] [--aggregate] [--per-repo] [--reports-dir PATH]',
    '[--detect-flaky] [--gate-history] [--min-severity LEVEL]',
    '[--category CAT] [--verify-tools]',
    'options:',
    '-h, --help            show this help message and exit',
    '--json                Output machine-readable JSON',
    '--output-dir OUTPUT_DIR',
    'Output directory (default: .cihub)',
    '--report REPORT       Path to report.json (default: <output-',
    'dir>/report.json)',
    '--summary SUMMARY     Path to summary.md (default: <output-dir>/summary.md)',
    '--run RUN_ID          GitHub workflow run ID to analyze (fetches',
    'artifacts/logs via gh CLI)',
    '--latest              Auto-triage the most recent failed workflow run (no',
    'run ID needed)',
    '--watch               Watch for new failed runs and auto-triage them',
    '(background daemon)',
    '--interval SECONDS    Polling interval for --watch mode (default: 30',
    'seconds)',
    '--artifacts-dir PATH  Path to pre-downloaded artifacts directory (offline',
    'mode)',
    '--repo OWNER/REPO     Target repository for remote run analysis (default:',
    'current repo)',
    "--workflow NAME       Filter remote runs by workflow name (e.g., 'hub-",
    "ci.yml')",
    "--branch NAME         Filter remote runs by branch name (e.g., 'main')",
    '--multi               Enable multi-report mode (aggregate multiple',
    'report.json files)',
    '--aggregate           Force aggregated output for multi-report mode (single',
    'combined bundle)',
    '--per-repo            Force per-repo output for multi-report mode (separate',
    'bundles with index)',
    '--reports-dir PATH    Directory containing multiple report.json files (for',
    '--multi mode)',
    '--detect-flaky        Analyze triage history for flaky test patterns',
    '--gate-history        Analyze triage history for gate status changes over',
    'time',
    '--min-severity LEVEL  Only show failures at or above this severity level',
    '(blocker > high > medium > low)',
    '--category CAT        Only show failures in this category',
    '--verify-tools        Verify that configured tools actually ran and have',
    'proof (metrics/artifacts)',
    'See also: ci, report',
  ])
# ---
# name: TestHelpSnapshots.test_verify_help_snapshot
  list([
    'usage: cihub verify [-h] [--json] [--remote] [--integration] [--repo REPO]',
    '[--include-disabled] [--install-deps] [--workdir WORKDIR]',
    '[--keep]',
    'options:',
    '-h, --help          show this help message and exit',
    '--json              Output machine-readable JSON',
    '--remote            Check connected repos for template drift (requires gh',
    'auth)',
    '--integration       Clone connected repos and run cihub ci (slow, requires',
    'gh auth)',
    '--repo REPO         Target repo (owner/name). Repeatable.',
    '--include-disabled  Include repos with dispatch_enabled=false',
    '--install-deps      Install repo dependencies during integration runs',
    '--workdir WORKDIR   Optional base directory for cloned repos (integration',
    'mode)',
    '--keep              Keep cloned repos on disk (integration mode)',
    'See also: check, sync-templates, ci',
  ])
# ---
# name: TestJsonOutputSnapshots.test_detect_json_structure
  dict({
    'data_keys': list([
      'items',
      'language',
      'raw_output',
    ]),
    'top_keys': list([
      'artifacts',
      'command',
      'data',
      'duration_ms',
      'exit_code',
      'files_generated',
      'files_modified',
      'problems',
      'status',
      'suggestions',
      'summary',
    ]),
  })
# ---
# name: TestJsonOutputSnapshots.test_init_json_structure
  dict({
    'has_artifacts': True,
    'has_files_generated': True,
    'top_keys': list([
      'artifacts',
      'command',
      'data',
      'duration_ms',
      'exit_code',
      'files_generated',
      'files_modified',
      'problems',
      'status',
      'suggestions',
      'summary',
    ]),
  })
# ---
# name: TestReportSchemaSnapshots.test_report_schema_fields
  dict({
    'required_keys': list([
      'branch',
      'python_version',
      'repository',
      'results',
      'schema_version',
      'tool_metrics',
      'tools_configured',
      'tools_ran',
      'tools_success',
    ]),
    'results_keys': list([
      'coverage',
      'tests_failed',
      'tests_passed',
    ]),
  })
# ---
# name: TestScaffoldOutputSnapshots.test_scaffold_list_output
  list([
    'Available fixtures',
    '- python-pyproject: Minimal Python project with pyproject.toml',
    '- python-setup: Minimal Python project with setup.py',
    '- python-src-layout: Python project with src/ directory layout',
    '- java-maven: Minimal Java project using Maven',
    '- java-gradle: Minimal Java project using Gradle',
    '- java-multi-module: Multi-module Maven project with parent POM',
    '- monorepo: Monorepo with java/ and python/ subdirs',
  ])
# ---
